fix view on mobile devices

--- a/assets/css/style.sass
+++ b/assets/css/style.sass
@@ -300,10 +300,9 @@ footer
 /*Media-------------------------------------------------------------------------------*/
 
 @media screen and (max-width: 850px)
-  .main
-    width: auto
+  main
+    width: 90%
     margin: 0 auto
-    padding: 10px
 
   .logo, .nav, .content-left, .footer
     display: block
@@ -322,10 +321,9 @@ footer
     font-size: 2em
 
 @media screen and (max-width: 500px)
-  .main
-    width: auto
+  main
+    width: 100%
     margin: 0 auto
-    padding: 10px
 
   .logo, .nav, .content-left, .footer
     display: block
@@ -347,7 +345,7 @@ footer
 
   blockquote
     margin: 0 10px 0
-  
+
   .hide-on-mobile
     display: none !important
 
